--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Coming Soon 2</title>
+	<title>CkickBlog Git</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
@@ -24,7 +24,8 @@
     <script src="audioplayerengine/amazingaudioplayer.js"></script>
     <link rel="stylesheet" type="text/css" href="audioplayerengine/initaudioplayer-1.css">
     <script src="audioplayerengine/initaudioplayer-1.js"></script>
-    <!-- End of head section HTML codes -->	
+    <!-- End of head section HTML codes -->		
+
 </head>
 <body>
 	
