--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			</p>
 
 			<div style="margin:12px auto;">
-    
+   <div style="margin:12px auto;"> 
     <!-- Insert to your webpage where you want to display the audio player -->
     <div id="amazingaudioplayer-1" style="display:block;position:relative;width:100%;max-width:300px;height:auto;margin:0px auto 0px;">
         <ul class="amazingaudioplayer-audios" style="display:none;">
