--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>CkickBlog Git</title>
+	<title>Coming Soon 2</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
@@ -18,14 +18,6 @@
 	<link rel="stylesheet" type="text/css" href="css/util.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 <!--===============================================================================================-->
-	
-<!-- Insert to your webpage before the </head> -->
-    <script src="audioplayerengine/jquery.js"></script>
-    <script src="audioplayerengine/amazingaudioplayer.js"></script>
-    <link rel="stylesheet" type="text/css" href="audioplayerengine/initaudioplayer-1.css">
-    <script src="audioplayerengine/initaudioplayer-1.js"></script>
-    <!-- End of head section HTML codes -->		
-
 </head>
 <body>
 	
@@ -44,11 +36,12 @@
 			</h3>
 
 			<p class="m2-txt1 txt-center p-b-48">
-				HTML5 Audio Streaming Player!
+				HTML5 Audio Streaming Player 
 			</p>
 
+
 			<div style="margin:12px auto;">
-   <div style="margin:12px auto;"> 
+    
     <!-- Insert to your webpage where you want to display the audio player -->
     <div id="amazingaudioplayer-1" style="display:block;position:relative;width:100%;max-width:300px;height:auto;margin:0px auto 0px;">
         <ul class="amazingaudioplayer-audios" style="display:none;">
