--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<script src="audioplayerengine/jquery.js"></script>
+    	<script src="audioplayerengine/amazingaudioplayer.js"></script>
+   	<link rel="stylesheet" type="text/css" href="audioplayerengine/initaudioplayer-1.css">
+    	<script src="audioplayerengine/initaudioplayer-1.js"></script>
 	<title>Coming Soon 2</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
