--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
 
 	<div id="amazingaudioplayer-1" style="display:block;position:relative;width:100%;max-width:300px;height:auto;margin:10px auto 0px;">
 	 <ul class="amazingaudioplayer-audios" style="display:none;">
-            <li data-artist="" data-title="Power 181 (Top 40)" data-album="" data-info="www.clickblog.net" data-image="audios/dfcdsfds.png" data-live="true">
+            <li data-artist="" data-title="Power 181 (Top 40)" data-album="" data-info="" data-image="" data-live="true">
                 <div class="amazingaudioplayer-source" data-src="http://listen.livestreamingservice.com/181-power_128k.mp3" data-type="audio/mpeg" />
             </li>
-            <li data-artist="" data-title="The Office" data-album="" data-info="www.clickblog.net" data-image="audios/dfcdsfds.png" data-live="true">
+            <li data-artist="" data-title="The Office" data-album="" data-info="" data-image="" data-live="true">
                 <div class="amazingaudioplayer-source" data-src="http://listen.livestreamingservice.com/181-office_128k.mp3" data-type="audio/mpeg" />
             </li>
-            <li data-artist="" data-title="The Mix" data-album="" data-info="www.clickblog.net" data-image="audios/dfcdsfds.png" data-live="true">
+            <li data-artist="" data-title="The Mix" data-album="" data-info="" data-image="" data-live="true">
                 <div class="amazingaudioplayer-source" data-src="http://listen.livestreamingservice.com/181-themix_128k.mp3" data-type="audio/mpeg" />
             </li>
-            <li data-artist="" data-title="UK top 40" data-album="" data-info="www.clickblog.net" data-image="audios/dfcdsfds.png" data-live="true">
+            <li data-artist="" data-title="UK top 40" data-album="" data-info="" data-image="" data-live="true">
                 <div class="amazingaudioplayer-source" data-src="http://listen.livestreamingservice.com/181-uktop40_128k.mp3" data-type="audio/mpeg" />
             </li>
-            <li data-artist="" data-title="The Beat (HipHop/R&B" data-album="" data-info="www.clickblog.net" data-image="audios/dfcdsfds.png" data-live="true">
+            <li data-artist="" data-title="The Beat-HipHop/R&B" data-album="" data-info="" data-image="" data-live="true">
                 <div class="amazingaudioplayer-source" data-src="http://listen.livestreamingservice.com/181-beat_128k.mp3" data-type="audio/mpeg" />
             </li>
         </ul>
