--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
             <li data-artist="" data-title="The Beat-HipHop/R&B" data-album="" data-info="" data-image="" data-live="true">
                 <div class="amazingaudioplayer-source" data-src="http://listen.livestreamingservice.com/181-beat_128k.mp3" data-type="audio/mpeg" />
             </li>
+	    <li data-artist="" data-title="The Party" data-album="" data-info="" data-image="" data-live="true">
+                <div class="amazingaudioplayer-source" data-src="http://listen.livestreamingservice.com/181-party_128k.mp3" data-type="audio/mpeg" />
+           </li>	 
         </ul>
 	</div>
 
