--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
             <li data-artist="" data-title="Power 181 (Top 40)" data-album="" data-info="" data-image="" data-live="true">
                 <div class="amazingaudioplayer-source" data-src="http://listen.livestreamingservice.com/181-power_128k.mp3" data-type="audio/mpeg" />
             </li>
+	    <li data-artist="" data-title="DEFJAY" data-album="" data-info="" data-image="" data-live="true">
+                <div class="amazingaudioplayer-source" data-src="https://icepool.silvacast.com/DEFJAY.mp3" data-type="audio/mpeg" />
+            </li>	 
             <li data-artist="" data-title="The Office" data-album="" data-info="" data-image="" data-live="true">
                 <div class="amazingaudioplayer-source" data-src="http://listen.livestreamingservice.com/181-office_128k.mp3" data-type="audio/mpeg" />
             </li>
