--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
 		<!--  -->
 		<div class="size1 flex-col-c-m p-l-15 p-r-15 p-t-50 p-b-50">
 			<h3 class="l1-txt1 txt-center p-b-25">
-				ClickBlog HTML5
+				HTML5.ClickBlog.Net
 			</h3>
 
 			<p class="m2-txt1 txt-center p-b-48">
-				HTML5 Audio Streaming Player
+				HTML5 Radio Streaming Player
+				Powered By: drie.xyz
 			</p>
 
 	<div id="amazingaudioplayer-1" style="display:block;position:relative;width:100%;max-width:300px;height:auto;margin:10px auto 0px;">
