--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			</h3>
 
 			<p class="m2-txt1 txt-center p-b-48">
-				HTML5 Radio Streaming Player
+				HTML5 Radio Streaming Player<br>
 				Powered By: drie.xyz
 			</p>
 
