--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 			<p class="m2-txt1 txt-center p-b-48">
 				HTML5 Radio Streaming Player<br>
-				Powered By: <a href="https://www.drie.xyz" rel="noopener" target="_blank">drie.xyz</a></p>
+				Powered By: <a href="https://www.drie.xyz" rel="noopener" target="_blank">Drie</a></p>
 			</p>
 
 	<div id="amazingaudioplayer-1" style="display:block;position:relative;width:100%;max-width:300px;height:auto;margin:10px auto 0px;">
