--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
            </li>	
 	   <li data-artist="" data-title="Reggae Roots" data-album="" data-info="" data-image="" data-live="true">
                 <div class="amazingaudioplayer-source" data-src="http://listen.livestreamingservice.com/181-reggae_128k.mp3" data-type="audio/mpeg" />
+           </li>
+	   <li data-artist="" data-title="My Album" data-album="" data-info="" data-image="" data-live="true">
+                <div class="amazingaudioplayer-source" https://docs.google.com/uc?export=download&id=1OCHvV5ZY6fNOg6JjRFt7wr3z9E9cB3fJ" data-type="audio/mpeg" />
            </li>	 
         </ul>
 	</div>
