--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="amazingaudioplayer-source" data-src="http://listen.livestreamingservice.com/181-reggae_128k.mp3" data-type="audio/mpeg" />
            </li>
 	   <li data-artist="" data-title="Drie" data-album="" data-info="" data-image="" data-live="true">
-                <div class="amazingaudioplayer-source" data-src="https://onedrive.live.com/embed?cid=11AE54C09B806C74&resid=11AE54C09B806C74%214414&authkey=ACQQF29Hb10XXHE" data-type="audio/mpeg" />
+                <div class="amazingaudioplayer-source" data-src="https://drive.google.com/uc?export=download&id=1-4ie14qIpvHQ8OJ95YVHhSOzmFRIybEW" data-type="audio/mpeg" />
            </li>	 
         </ul>
 	</div>
