--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 		<!--  -->
 		<div class="size1 flex-col-c-m p-l-15 p-r-15 p-t-50 p-b-50">
 			<h3 class="l1-txt1 txt-center p-b-25">
-				HTML5.ClickBlog.Net
+				HTML5 ClickBlog
 			</h3>
 
 			<p class="m2-txt1 txt-center p-b-48">
-				HTML5 Radio Streaming Player<br>
+				Radio Streaming Player<br>
 				Powered By: <a href="https://www.drie.xyz" rel="noopener" target="_blank">Drie</a></p>
 			</p>
 
